# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "docker-starter-rust"
version = "0.1.0"
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] } # http requests
bytes = "1.6"                                                    # helps wrap responses from reqwest
tokio = { version = "1.37", features = ["full"] }                # async http requests
libc = "0.2"                                                       # for syscalls like chroot
serde = { version = "1.0", features = ["derive"] }             # for json mangling
serde_json = "1.0"                                              # for json mangling
anyhow = "1.0"                                                  # error handling
thiserror = "1.0"                                               # error handling
tempfile = "3.10"                                                     # creating temporary directories
regex = "1.10"                                                        # for regular expressions
flate2 = "1.0"                                                  # for handling compressed data
tar = "0.4"
